--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -15,7 +15,7 @@ WORKDIR /app/packages/env-config
 RUN yarn install && yarn build
 
 WORKDIR /app/packages/website
-RUN yarn install && yarn build
+RUN yarn install --force && yarn build
 
 ENV PORT=80
 EXPOSE 80
