--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -53,7 +53,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
-    "@gittrends-app/github-proxy-server": "^6.0.0",
+    "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env-config": "file:../env-config",
     "@types/bluebird": "^3.5.36",
     "@types/bull": "^3.15.4",
