--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
     "node": ">=14.0.0"
   },
   "workspaces": [
-    "packages/*", "research/*"
+    "packages/*",
+    "research/*"
   ],
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^2.0.4",
-    "@typescript-eslint/eslint-plugin": "4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
+    "eslint": "8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "11",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-promise": "5.1.1",
     "eslint-plugin-standard": "5.0.0",
-    "prettier": "^2.4.0",
-    "typescript": "^4.4.3"
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
   "config": {
     "commitizen": {
