--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -24,59 +24,63 @@
     "clinic-flame": "clinic flame -- node -r @gittrends/env-config dist/updater.js"
   },
   "dependencies": {
-    "@bull-board/api": "^3.5.4",
-    "@bull-board/express": "^3.5.4",
+    "@bull-board/api": "^3.7.0",
+    "@bull-board/express": "^3.7.0",
     "@gittrends/database-config": "file:../database-config",
-    "axios": "^0.21.4",
+    "axios": "^0.24.0",
     "bluebird": "^3.7.2",
-    "bullmq": "^1.47.0",
+    "bullmq": "^1.52.0",
     "chalk": "^4.1.2",
-    "commander": "^8.2.0",
+    "commander": "^8.3.0",
     "consola": "^2.15.3",
     "cron": "^1.8.2",
     "dayjs": "^1.10.7",
     "debug": "^4.3.2",
     "express": "^4.17.1",
     "graphql-query-compress": "^1.2.4",
-    "ioredis": "^4.27.9",
+    "ioredis": "^4.28.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "mongodb": "^4.1.1",
-    "node-object-hash": "^2.3.9",
+    "mongodb": "^4.1.4",
+    "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
     "promise-retry": "^2.0.1",
     "redis-lru": "^0.6.0",
-    "table": "^6.7.1",
-    "user-agents": "^1.0.773"
+    "table": "^6.7.3",
+    "user-agents": "^1.0.831"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env-config": "file:../env-config",
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/bluebird": "^3.5.36",
-    "@types/bull": "^3.15.4",
+    "@types/bull": "^3.15.5",
     "@types/cron": "^1.7.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
-    "@types/ioredis": "^4.27.2",
-    "@types/jest": "^27.0.1",
+    "@types/ioredis": "^4.28.1",
+    "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
-    "@types/numeral": "^2.0.1",
+    "@types/numeral": "^2.0.2",
     "@types/promise-retry": "^1.1.3",
     "@types/table": "^6.3.2",
     "@types/user-agents": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "babel-jest": "^27.2.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "babel-jest": "^27.3.1",
     "clinic": "^9.0.0",
     "core-util-is": "^1.0.3",
-    "get-port": "^5.1.1",
-    "jest": "^27.2.0",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "eslint": "8.2.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-promise": "5.1.1",
+    "get-port": "^6.0.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "config": {
     "resources": [
