build: update deps and improve build scripts

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
-backups
-docs
+*
+!.yarnrc
+!environment.d.ts
+!packages/env-config
+!packages/database-config
+!packages/service
+!package.json
+!tsconfig.*
 **/node_modules
 **/dist
-**/build
-**/.clinic
-**/.next
-npm-debug.log
-.env
-.env.example
