--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   ],
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "commitizen": "^4.2.4",
@@ -33,8 +35,11 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "5.1.1",
-    "eslint-plugin-standard": "5.0.0",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
   "config": {
