--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -17,6 +17,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "es6-shim": "^0.35.6",
+    "lodash": "^4.17.21",
     "migrate-mongo": "^8.2.3",
     "mongodb": "4.1.4",
     "reflect-metadata": "^0.1.13"
@@ -26,7 +27,7 @@
     "@shelf/jest-mongodb": "^2.1.0",
     "@types/es6-shim": "^0.31.42",
     "@types/jest": "^27.0.2",
-    "@types/mongodb": "^4.0.7",
+    "@types/lodash": "^4.14.176",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0"
