--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -41,7 +41,6 @@
     "ioredis": "^4.28.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "mongodb": "^4.1.4",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
     "promise-retry": "^2.0.1",
@@ -50,37 +49,19 @@
     "user-agents": "^1.0.831"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env-config": "file:../env-config",
-    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/bluebird": "^3.5.36",
     "@types/bull": "^3.15.5",
     "@types/cron": "^1.7.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.1",
-    "@types/jest": "^27.0.2",
-    "@types/mongodb": "^4.0.7",
     "@types/numeral": "^2.0.2",
     "@types/promise-retry": "^1.1.3",
-    "@types/table": "^6.3.2",
     "@types/user-agents": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "babel-jest": "^27.3.1",
-    "clinic": "^9.0.0",
     "core-util-is": "^1.0.3",
-    "eslint": "8.2.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-promise": "5.1.1",
-    "get-port": "^6.0.0",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "get-port": "^6.0.0"
   },
   "config": {
     "resources": [
