refactor: major code improvements

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -5,4 +5,5 @@ trailingComma: 'none'
 arrowParens: 'always'
 printWidth: 100
 importOrderSeparation: true
-importOrder: ["^@gittrends/(.*)$", "^[./]"]
+importOrder: ['^@gittrends/(.*)$', '^[./]']
+importOrderCaseInsensitive: true
