--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -6,7 +6,7 @@
   "author": "Hudson Silva Borges <hudsonsilbor@gmail.com>",
   "scripts": {
     "build": "rm -rf dist && yarn tsc",
-    "jest": "node -r @gittrends/env-config node_modules/.bin/jest",
+    "test": "node -r @gittrends/env-config node_modules/.bin/jest",
     "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.ts'",
     "proxy-server": "github-proxy-server --api graphql --tokens ../../tokens.txt",
     "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
@@ -57,11 +57,15 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.1",
+    "@types/nock": "^11.1.0",
     "@types/numeral": "^2.0.2",
     "@types/promise-retry": "^1.1.3",
     "@types/user-agents": "^1.0.2",
     "core-util-is": "^1.0.3",
-    "get-port": "^6.0.0"
+    "get-port": "^6.0.0",
+    "jest": "^27.3.1",
+    "nock": "^13.2.1",
+    "ts-jest": "^27.0.7"
   },
   "config": {
     "resources": [
