--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -19,7 +19,7 @@
     "dev:import": "ts-node -r tsconfig-paths/register -r @gittrends/env-config database/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^3.2.1",
+    "@prisma/client": "^3.5.0",
     "@types/nodemailer": "^6.4.4",
     "@vendia/serverless-express": "^4.3.11",
     "async": "^3.2.1",
@@ -37,26 +37,26 @@
     "faker": "^5.5.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.7.1"
   },
   "devDependencies": {
-    "@gittrends/env-config": "file:../env-config",
-    "@types/async": "^3.2.9",
+    "@gittrends/env-config": "link:../env-config",
+    "@types/async": "^3.2.10",
     "@types/aws-lambda": "^8.10.83",
-    "@types/body-parser": "^1.19.1",
+    "@types/body-parser": "^1.19.2",
     "@types/cli-progress": "^3.9.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.14.177",
     "@types/morgan": "^1.9.3",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@typescript-eslint/parser": "^5.4.0",
     "claudia": "^5.13.1",
-    "prisma": "^3.2.1",
+    "prisma": "^3.5.0",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.3"
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.2"
   }
 }
