--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -12,22 +12,22 @@
   "dependencies": {
     "@ajna/pagination": "^1.4.13",
     "@chakra-ui/gatsby-plugin": "^2.0.1",
-    "@chakra-ui/react": "^1.6.7",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@gittrends/website-api": "file:../website-api",
+    "@gittrends/website-api": "link:../website-api",
     "add": "^2.0.6",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
-    "framer-motion": "^5.2.1",
+    "framer-motion": "^5.3.1",
     "lodash": "^4.17.21",
-    "next": "12.0.3",
+    "next": "12.0.4",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-detect-click-outside": "^1.1.1",
@@ -38,18 +38,18 @@
     "vercel": "^23.1.2"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.0.3",
+    "@next/eslint-plugin-next": "^12.0.4",
     "@types/numeral": "^2.0.1",
-    "@types/react": "^17.0.20",
+    "@types/react": "^17.0.36",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.2.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "sass": "^1.40.0",
     "styled-jsx-plugin-sass": "^1.0.0",
-    "webpack": "5.63.0"
+    "webpack": "5.64.2"
   }
 }
