--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && yarn tsc",
+    "test": "jest",
     "migrate:create": "sh -c 'ts-node node_modules/.bin/migrate-mongo create $0 -f migrate-mongo.ts' ",
     "migrate:status": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo status -f migrate-mongo.ts",
     "migrate:undo-last": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo down -f migrate-mongo.ts && npm run migrate:status",
