fix(service): replace bull with bee due to critical issues

--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -26,12 +26,11 @@
     "pm2-runtime": "node -r @gittrends/env-config ./node_modules/.bin/pm2-runtime"
   },
   "dependencies": {
-    "@bull-board/api": "^3.7.0",
-    "@bull-board/express": "^3.7.0",
     "@gittrends/database-config": "link:../database-config",
     "axios": "^0.24.0",
+    "bee-queue": "^1.4.0",
     "bluebird": "^3.7.2",
-    "bullmq": "^1.54.2",
+    "bull-arena": "^3.29.3",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "consola": "^2.15.3",
@@ -40,7 +39,7 @@
     "debug": "^4.3.2",
     "express": "^4.17.1",
     "graphql-query-compress": "^1.2.4",
-    "ioredis": "^4.28.0",
+    "ioredis": "^4.28.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "node-object-hash": "^2.3.10",
@@ -54,7 +53,7 @@
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env-config": "link:../env-config",
     "@types/bluebird": "^3.5.36",
-    "@types/bull": "^3.15.5",
+    "@types/bull-arena": "^3.0.4",
     "@types/cron": "^1.7.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
