--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -22,11 +22,13 @@
     "clinic-doctor": "clinic doctor -- node -r @gittrends/env-config dist/updater.js",
     "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env-config dist/updater.js",
     "clinic-flame": "clinic flame -- node -r @gittrends/env-config dist/updater.js",
+    "clinic-heapprofiler": "clinic heapprofiler -- node --expose-gc -r @gittrends/env-config dist/updater.js",
     "pm2": "node -r @gittrends/env-config ./node_modules/.bin/pm2",
     "pm2-runtime": "node -r @gittrends/env-config ./node_modules/.bin/pm2-runtime"
   },
   "dependencies": {
     "@gittrends/database-config": "link:../database-config",
+    "async-retry": "^1.3.3",
     "axios": "^0.24.0",
     "bee-queue": "^1.4.0",
     "bluebird": "^3.7.2",
@@ -42,6 +44,7 @@
     "ioredis": "^4.28.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "node-fetch": "^2.6.6",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
     "promise-retry": "^2.0.1",
@@ -52,6 +55,7 @@
   "devDependencies": {
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env-config": "link:../env-config",
+    "@types/async-retry": "^1.4.3",
     "@types/bluebird": "^3.5.36",
     "@types/bull-arena": "^3.0.4",
     "@types/cron": "^1.7.3",
@@ -59,9 +63,12 @@
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.1",
     "@types/nock": "^11.1.0",
+    "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
     "@types/promise-retry": "^1.1.3",
     "@types/user-agents": "^1.0.2",
+    "babel-jest": "^27.4.5",
+    "clinic": "^10.0.0",
     "core-util-is": "^1.0.3",
     "get-port": "^6.0.0",
     "jest": "^27.3.1",
