--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -29,26 +29,21 @@
   "dependencies": {
     "@gittrends/database-config": "link:../database-config",
     "async-retry": "^1.3.3",
-    "axios": "^0.24.0",
     "bee-queue": "^1.4.0",
-    "bluebird": "^3.7.2",
     "bull-arena": "^3.29.3",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "consola": "^2.15.3",
     "cron": "^1.8.2",
     "dayjs": "^1.10.7",
-    "debug": "^4.3.2",
     "express": "^4.17.1",
     "graphql-query-compress": "^1.2.4",
     "ioredis": "^4.28.1",
-    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "lru-cache": "^6.0.0",
     "node-fetch": "^2.6.6",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
-    "promise-retry": "^2.0.1",
-    "redis-lru": "^0.6.0",
     "table": "^6.7.3",
     "user-agents": "^1.0.842"
   },
@@ -56,20 +51,16 @@
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env-config": "link:../env-config",
     "@types/async-retry": "^1.4.3",
-    "@types/bluebird": "^3.5.36",
     "@types/bull-arena": "^3.0.4",
     "@types/cron": "^1.7.3",
-    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.1",
+    "@types/lru-cache": "^5.1.1",
     "@types/nock": "^11.1.0",
     "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
-    "@types/promise-retry": "^1.1.3",
     "@types/user-agents": "^1.0.2",
-    "babel-jest": "^27.4.5",
     "clinic": "^10.0.0",
-    "core-util-is": "^1.0.3",
     "get-port": "^6.0.0",
     "jest": "^27.3.1",
     "nock": "^13.2.1",
