--- a/packages/service/Dockerfile
+++ b/packages/service/Dockerfile
@@ -6,12 +6,12 @@ WORKDIR /app
 COPY . .
 RUN rm -rf packages
 COPY ./packages/env-config ./packages/env-config
-COPY ./packages/database-config ./packages/database-config
+COPY ./packages/database ./packages/database
 COPY ./packages/service ./packages/service
 
 RUN yarn install
 RUN yarn workspace @gittrends/env-config build
-RUN yarn workspace @gittrends/database-config build
+RUN yarn workspace @gittrends/database build
 RUN yarn workspace @gittrends/service build
 
 WORKDIR /app/packages/service
