--- a/research/locations/package.json
+++ b/research/locations/package.json
@@ -14,7 +14,7 @@
     "update-locations": "node -r @gittrends/env-config dist/update-locations.js"
   },
   "dependencies": {
-    "@gittrends/database-config": "file:../../packages/database-config",
+    "@gittrends/database": "file:../../packages/database",
     "commander": "^8.1.0",
     "consola": "^2.15.3",
     "fast-csv": "^4.3.6",
