--- a/packages/service/Dockerfile
+++ b/packages/service/Dockerfile
@@ -5,12 +5,12 @@ RUN apk add --update make gcc g++ python3 git bash
 WORKDIR /app
 COPY . .
 RUN rm -rf packages
-COPY ./packages/env-config ./packages/env-config
+COPY ./packages/env ./packages/env
 COPY ./packages/database ./packages/database
 COPY ./packages/service ./packages/service
 
 RUN yarn install
-RUN yarn workspace @gittrends/env-config build
+RUN yarn workspace @gittrends/env build
 RUN yarn workspace @gittrends/database build
 RUN yarn workspace @gittrends/service build
 
