--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -6,25 +6,25 @@
   "author": "Hudson Silva Borges <hudsonsilbor@gmail.com>",
   "scripts": {
     "build": "rm -rf dist && yarn tsc",
-    "test": "node -r @gittrends/env-config node_modules/.bin/jest",
+    "test": "node -r @gittrends/env node_modules/.bin/jest",
     "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.ts'",
     "proxy-server": "github-proxy-server --api graphql --tokens ../../tokens.txt",
-    "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
-    "schedule": "node -r @gittrends/env-config dist/scheduler.js",
-    "update": "node --expose-gc -r @gittrends/env-config dist/updater.js",
-    "repos-stats": "node -r @gittrends/env-config dist/extra/repos-stats.js",
-    "queue-board": "node -r @gittrends/env-config dist/extra/queue-board.js",
-    "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T scheduler.ts",
-    "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T add-repositories.ts",
-    "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T updater.ts",
-    "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/queue-board.ts",
-    "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/repos-stats.ts",
-    "clinic-doctor": "clinic doctor -- node -r @gittrends/env-config dist/updater.js",
-    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env-config dist/updater.js",
-    "clinic-flame": "clinic flame -- node -r @gittrends/env-config dist/updater.js",
-    "clinic-heapprofiler": "clinic heapprofiler -- node --expose-gc -r @gittrends/env-config dist/updater.js",
-    "pm2": "node -r @gittrends/env-config ./node_modules/.bin/pm2",
-    "pm2-runtime": "node -r @gittrends/env-config ./node_modules/.bin/pm2-runtime"
+    "add-repositories": "node -r @gittrends/env dist/add-repositories.js",
+    "schedule": "node -r @gittrends/env dist/scheduler.js",
+    "update": "node --expose-gc -r @gittrends/env dist/updater.js",
+    "repos-stats": "node -r @gittrends/env dist/extra/repos-stats.js",
+    "queue-board": "node -r @gittrends/env dist/extra/queue-board.js",
+    "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env -T scheduler.ts",
+    "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env -T add-repositories.ts",
+    "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater.ts",
+    "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/queue-board.ts",
+    "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/repos-stats.ts",
+    "clinic-doctor": "clinic doctor -- node -r @gittrends/env dist/updater.js",
+    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env dist/updater.js",
+    "clinic-flame": "clinic flame -- node -r @gittrends/env dist/updater.js",
+    "clinic-heapprofiler": "clinic heapprofiler -- node --expose-gc -r @gittrends/env dist/updater.js",
+    "pm2": "node -r @gittrends/env ./node_modules/.bin/pm2",
+    "pm2-runtime": "node -r @gittrends/env ./node_modules/.bin/pm2-runtime"
   },
   "dependencies": {
     "@gittrends/database": "link:../database",
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
-    "@gittrends/env-config": "link:../env-config",
+    "@gittrends/env": "link:../env",
     "@types/async-retry": "^1.4.3",
     "@types/bull-arena": "^3.0.4",
     "@types/cron": "^1.7.3",
