--- a/packages/website-api/Dockerfile
+++ b/packages/website-api/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 COPY . .
 RUN rm -rf packages
 
-COPY ./packages/env-config ./packages/env-config
+COPY ./packages/env ./packages/env
 COPY ./packages/website-api ./packages/website-api
 
-WORKDIR /app/packages/env-config
+WORKDIR /app/packages/env
 RUN yarn install && yarn build
 
 WORKDIR /app/packages/website-api
