--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next dev",
-    "build": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next build",
-    "export": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next export",
-    "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start",
+    "dev": "node -r tsconfig-paths/register -r @gittrends/env ./node_modules/.bin/next dev",
+    "build": "node -r tsconfig-paths/register -r @gittrends/env ./node_modules/.bin/next build",
+    "export": "node -r tsconfig-paths/register -r @gittrends/env ./node_modules/.bin/next export",
+    "start": "node -r tsconfig-paths/register -r @gittrends/env ./node_modules/.bin/next start",
     "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.{ts,tsx}'"
   },
   "dependencies": {
