--- a/research/locations/package.json
+++ b/research/locations/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "build": "rm -rf dist && yarn tsc",
     "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.{ts,tsx}'",
-    "dev:export-locations": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config -T export-locations.ts",
-    "dev:update-locations": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config -T update-locations.ts",
-    "dev:export-rankings": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config -T export-rankings.ts",
-    "export-locations": "node -r @gittrends/env-config dist/export-locations.js",
-    "export-rankings": "node -r @gittrends/env-config dist/export-rankings.js",
-    "update-locations": "node -r @gittrends/env-config dist/update-locations.js"
+    "dev:export-locations": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env -T export-locations.ts",
+    "dev:update-locations": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env -T update-locations.ts",
+    "dev:export-rankings": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env -T export-rankings.ts",
+    "export-locations": "node -r @gittrends/env dist/export-locations.js",
+    "export-rankings": "node -r @gittrends/env dist/export-rankings.js",
+    "update-locations": "node -r @gittrends/env dist/update-locations.js"
   },
   "dependencies": {
     "@gittrends/database": "file:../../packages/database",
@@ -22,7 +22,7 @@
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
-    "@gittrends/env-config": "file:../../packages/env-config",
+    "@gittrends/env": "file:../../packages/env",
     "@types/mkdirp": "^1.0.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0"
