--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -62,6 +62,7 @@
     "jest": "^27.3.1",
     "nock": "^13.2.1",
     "pm2": "^5.1.2",
+    "pm2-webui": "hsborges/pm2-webui",
     "ts-jest": "^27.0.7"
   },
   "config": {
