--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -27,16 +27,18 @@
     "pm2-runtime": "node -r @gittrends/env ./node_modules/.bin/pm2-runtime"
   },
   "dependencies": {
+    "@bull-board/express": "^3.8.1",
     "@gittrends/database": "link:../database",
     "async-retry": "^1.3.3",
-    "bee-queue": "^1.4.0",
-    "bull-arena": "^3.29.3",
+    "bullmq": "^1.59.4",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "consola": "^2.15.3",
     "cron": "^1.8.2",
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
+    "ioredis": "^4.28.2",
+    "ip": "^1.1.5",
     "lodash": "^4.17.21",
     "lru-cache": "^6.0.0",
     "node-fetch": "^2.6.6",
@@ -50,9 +52,10 @@
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env": "link:../env",
     "@types/async-retry": "^1.4.3",
-    "@types/bull-arena": "^3.0.4",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.5",
+    "@types/ip": "^1.1.0",
     "@types/lru-cache": "^5.1.1",
     "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
