--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,28 @@ services:
   mongo:
     image: mongo:latest
     command: --wiredTigerJournalCompressor zstd --directoryperdb
-    restart: always
+    restart: unless-stopped
     ports:
       - 27017:27017
     volumes:
       - db:/data/db
+    logging:
+      driver: local
+      options:
+        max-file: 5
+        max-size: 10m
 
   redis:
     image: redis:alpine
     command: --maxmemory-policy allkeys-lru
-    restart: always
+    restart: unless-stopped
     ports:
       - 6379:6379
+    logging:
+      driver: local
+      options:
+        max-file: 5
+        max-size: 10m
 
 volumes:
   db:
