feat(service): add script to update manually update resources from repositories

--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -12,11 +12,13 @@
     "add-repositories": "node -r @gittrends/env dist/add-repositories.js",
     "schedule": "node -r @gittrends/env dist/scheduler.js",
     "update": "node --expose-gc -r @gittrends/env dist/updater.js",
+    "resource-update": "node --expose-gc -r @gittrends/env dist/extra/resource-updater.js",
     "repos-stats": "node -r @gittrends/env dist/extra/repos-stats.js",
     "queue-board": "node -r @gittrends/env dist/extra/queue-board.js",
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater.ts",
+    "dev:resource-update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/resource-updater.ts",
     "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/queue-board.ts",
     "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/repos-stats.ts",
     "clinic-doctor": "clinic doctor -- node -r @gittrends/env dist/updater.js",
