--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,10 @@ GT_PROXY_USER_AGENT='[User Agent] GitTrends.app (hsborges/gittrends-repository)'
 GT_PROXY_RETRIES=1
 
 # website config
-GT_WEBSITE_HOST=localhost
-GT_WEBSITE_PORT=8080
-GT_WEBSITE_API_PRISMA_URL=file:/tmp/gittrends.app.sqlite
+GT_WEBSITE_URL=http://localhost:8080
 GT_WEBSITE_API_URL=http://localhost:8081
+GT_WEBSITE_PRISMA_URL=file:/tmp/gittrends.app.sqlite
+
 
 # website api - github e mail config
 GT_MAIL_TO=
@@ -38,5 +38,4 @@ GT_UPDATER_USERS_INSTANCES=1
 
 # other
 GT_CACHE_SIZE=50000
-GT_QUEUE_BOARD_PORT=8082
 
