--- a/package.json
+++ b/package.json
@@ -37,13 +37,19 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "5.1.1",
     "prettier": "^2.4.1",
+    "sync-dotenv": "^2.6.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "husky": "^7.0.0"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "scripts": {
+    "env": "sync-dotenv",
+    "prepare": "husky install"
   }
 }
