--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+
+NODE_ENV=development
+
 # database - mongo config
 GT_MONGO_URL='mongodb://localhost:27017/gittrends_app-development'
 GT_MONGO_POOL_SIZE=5
@@ -31,7 +34,7 @@ GITHUB_REDIRECT_URI=
 # pm2 service config
 GT_SCHEDULER_CRON='0 */6 * * *'
 GT_PROXY_TOKENS_FILE='./tokens.txt'
-GT_UPDATER_REPOS_WORKERS=25
+GT_UPDATER_REPOS_WORKERS=1
 GT_UPDATER_REPOS_INSTANCES=1
 GT_UPDATER_USERS_WORKERS=1
 GT_UPDATER_USERS_INSTANCES=1
