--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "research/*"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^16.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
@@ -36,12 +38,12 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "5.1.1",
+    "husky": "^7.0.0",
     "prettier": "^2.4.1",
     "sync-dotenv": "^2.6.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2",
-    "husky": "^7.0.0"
+    "typescript": "^4.5.2"
   },
   "config": {
     "commitizen": {
