--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -29,6 +29,7 @@
     "pm2-runtime": "node -r @gittrends/env ./node_modules/.bin/pm2-runtime"
   },
   "dependencies": {
+    "@alloc/quick-lru": "^5.2.0",
     "@bull-board/express": "^3.8.1",
     "@gittrends/database": "link:../database",
     "add": "^2.0.6",
@@ -44,7 +45,6 @@
     "ioredis": "^4.28.2",
     "ip": "^1.1.5",
     "lodash": "^4.17.21",
-    "lru-cache": "^6.0.0",
     "node-fetch": "^2.6.6",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
@@ -63,7 +63,6 @@
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.5",
     "@types/ip": "^1.1.0",
-    "@types/lru-cache": "^5.1.1",
     "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
     "@types/user-agents": "^1.0.2",
