perf(service): add data to a message queue before inserting on database

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,12 @@ NODE_ENV=development
 GT_MONGO_URL='mongodb://localhost:27017/gittrends_app-development'
 GT_MONGO_POOL_SIZE=5
 
-# redis - caching and messaging queue
+# redis - caching and task messaging queue
 GT_REDIS_URL='redis://localhost:6379/0'
+
+# rabbitmq - data message queue
+GT_RABBITMQ_URL='amqp://localhost:5672'
+GT_RABBITMQ_PREFETCH=5
 
 # proxy server config
 GT_PROXY_URL='http://localhost:3000'
