--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -33,6 +33,7 @@
     "@bull-board/express": "^3.8.1",
     "@gittrends/database": "link:../database",
     "add": "^2.0.6",
+    "amqplib": "^0.8.0",
     "async-retry": "^1.3.3",
     "bullmq": "^1.59.4",
     "chalk": "^4.1.2",
@@ -58,6 +59,7 @@
     "@gittrends-app/github-proxy-server": "gittrends-app/github-proxy-server",
     "@gittrends/env": "link:../env",
     "@shelf/jest-mongodb": "^2.2.0",
+    "@types/amqplib": "^0.8.2",
     "@types/async-retry": "^1.4.3",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
