--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -12,19 +12,22 @@
     "add-repositories": "node -r @gittrends/env dist/add-repositories.js",
     "schedule": "node -r @gittrends/env dist/scheduler.js",
     "update": "node --expose-gc -r @gittrends/env dist/updater.js",
+    "update-collect": "node --expose-gc --inspect -r @gittrends/env dist/updater-collect.js",
     "resource-update": "node --expose-gc -r @gittrends/env dist/extra/resource-updater.js",
     "repos-stats": "node -r @gittrends/env dist/extra/repos-stats.js",
     "queue-board": "node -r @gittrends/env dist/extra/queue-board.js",
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater.ts",
+    "dev:update-collect": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater-collect.ts",
+    "dev:update-persist": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater-persist.ts",
     "dev:resource-update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/resource-updater.ts",
     "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/queue-board.ts",
     "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/repos-stats.ts",
-    "clinic-doctor": "clinic doctor -- node -r @gittrends/env dist/updater.js",
-    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env dist/updater.js",
-    "clinic-flame": "clinic flame -- node -r @gittrends/env dist/updater.js",
-    "clinic-heapprofiler": "clinic heapprofiler -- node --expose-gc -r @gittrends/env dist/updater.js",
+    "clinic-doctor": "clinic doctor -- node -r @gittrends/env dist/updater-collect.js",
+    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env dist/updater-collect.js",
+    "clinic-flame": "clinic flame -- node -r @gittrends/env dist/updater-collect.js",
+    "clinic-heapprofiler": "clinic heapprofiler -- node -r @gittrends/env dist/updater-collect.js",
     "pm2": "node -r @gittrends/env ./node_modules/.bin/pm2",
     "pm2-runtime": "node -r @gittrends/env ./node_modules/.bin/pm2-runtime"
   },
@@ -35,23 +38,22 @@
     "add": "^2.0.6",
     "amqplib": "^0.8.0",
     "async-retry": "^1.3.3",
-    "bullmq": "^1.59.4",
+    "bullmq": "^1.76.4",
     "chalk": "^4.1.2",
     "cli-progress": "^3.10.0",
-    "commander": "^8.3.0",
+    "commander": "^9.0.0",
     "consola": "^2.15.3",
     "cron": "^1.8.2",
-    "dayjs": "^1.10.7",
-    "express": "^4.17.1",
-    "ioredis": "^4.28.2",
+    "dayjs": "^1.10.8",
+    "express": "^4.17.3",
+    "ioredis": "^4.28.5",
     "ip": "^1.1.5",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.6",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
     "parse-redis-url-simple": "^1.0.2",
-    "table": "^6.7.3",
-    "user-agents": "^1.0.842",
+    "table": "^6.8.0",
     "wtfnode": "^0.9.1",
     "yarn": "^1.22.17"
   },
@@ -67,7 +69,6 @@
     "@types/ip": "^1.1.0",
     "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
-    "@types/user-agents": "^1.0.2",
     "@types/wtfnode": "^0.7.0",
     "clinic": "^10.0.0",
     "get-port": "^6.0.0",
