--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -48,6 +48,7 @@
     "express": "^4.17.3",
     "ioredis": "^4.28.5",
     "ip": "^1.1.5",
+    "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.6",
     "node-object-hash": "^2.3.10",
