refactor: save progress on refactoring

--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -19,7 +19,7 @@
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater.ts",
-    "dev:update-collect": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater-collect.ts",
+    "dev:update-collect": "TS_NODE_TRANSPILE_ONLY=true node --inspect --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env updater-collect.ts",
     "dev:update-persist": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater-persist.ts",
     "dev:resource-update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/resource-updater.ts",
     "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/queue-board.ts",
@@ -27,7 +27,7 @@
     "clinic-doctor": "clinic doctor -- node -r @gittrends/env dist/updater-collect.js",
     "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env dist/updater-collect.js",
     "clinic-flame": "clinic flame -- node -r @gittrends/env dist/updater-collect.js",
-    "clinic-heapprofiler": "clinic heapprofiler -- node -r @gittrends/env dist/updater-collect.js",
+    "clinic-heapprofiler": "TS_NODE_TRANSPILE_ONLY=true clinic heapprofiler -- node -r ts-node/register -r @gittrends/env updater-collect.ts",
     "pm2": "node -r @gittrends/env ./node_modules/.bin/pm2",
     "pm2-runtime": "node -r @gittrends/env ./node_modules/.bin/pm2-runtime"
   },
@@ -66,7 +66,6 @@
     "@types/async-retry": "^1.4.3",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
-    "@types/ioredis": "^4.28.5",
     "@types/ip": "^1.1.0",
     "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
