--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -19,7 +19,7 @@
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater.ts",
-    "dev:update-collect": "TS_NODE_TRANSPILE_ONLY=true node --inspect --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env updater-collect.ts",
+    "dev:update-collect": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env updater-collect.ts",
     "dev:update-persist": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater-persist.ts",
     "dev:resource-update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/resource-updater.ts",
     "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/queue-board.ts",
@@ -37,7 +37,8 @@
     "@gittrends/database": "link:../database",
     "add": "^2.0.6",
     "amqplib": "^0.8.0",
-    "async-retry": "^1.3.3",
+    "axios": "^0.24",
+    "axios-retry": "^3.2.4",
     "bullmq": "^1.76.4",
     "chalk": "^4.1.2",
     "cli-progress": "^3.10.0",
@@ -50,7 +51,6 @@
     "ip": "^1.1.5",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^2.6.6",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
     "parse-redis-url-simple": "^1.0.2",
@@ -63,11 +63,10 @@
     "@gittrends/env": "link:../env",
     "@shelf/jest-mongodb": "^2.2.0",
     "@types/amqplib": "^0.8.2",
-    "@types/async-retry": "^1.4.3",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.8",
     "@types/ip": "^1.1.0",
-    "@types/node-fetch": "^2.x.x",
     "@types/numeral": "^2.0.2",
     "@types/wtfnode": "^0.7.0",
     "clinic": "^10.0.0",
