refactor(service): major refactoring and bug fixes on service

--- a/.env.example
+++ b/.env.example
@@ -38,10 +38,11 @@ GITHUB_REDIRECT_URI=
 # pm2 service config
 GT_SCHEDULER_CRON='0 */6 * * *'
 GT_PROXY_TOKENS_FILE='./tokens.txt'
-GT_UPDATER_REPOS_WORKERS=1
-GT_UPDATER_REPOS_INSTANCES=1
-GT_UPDATER_USERS_WORKERS=1
-GT_UPDATER_USERS_INSTANCES=1
+GT_UPDATER_WORKERS=1
+GT_CRAWLER_REPOS_WORKERS=1
+GT_CRAWLER_REPOS_INSTANCES=1
+GT_CRAWLER_USERS_WORKERS=1
+GT_CRAWLER_USERS_INSTANCES=1
 
 # other
 GT_CACHE_SIZE=50000
