--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -11,22 +11,18 @@
     "proxy-server": "github-proxy-server --api graphql --tokens ../../tokens.txt",
     "add-repositories": "node -r @gittrends/env dist/add-repositories.js",
     "schedule": "node -r @gittrends/env dist/scheduler.js",
+    "crawler": "node --expose-gc --inspect -r @gittrends/env dist/crawler.js",
     "update": "node --expose-gc -r @gittrends/env dist/updater.js",
-    "update-collect": "node --expose-gc --inspect -r @gittrends/env dist/updater-collect.js",
     "resource-update": "node --expose-gc -r @gittrends/env dist/extra/resource-updater.js",
     "repos-stats": "node -r @gittrends/env dist/extra/repos-stats.js",
     "queue-board": "node -r @gittrends/env dist/extra/queue-board.js",
-    "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env -T scheduler.ts",
-    "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env -T add-repositories.ts",
-    "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater.ts",
-    "dev:update-collect": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env updater-collect.ts",
-    "dev:update-persist": "ts-node -r tsconfig-paths/register -r @gittrends/env -T updater-persist.ts",
-    "dev:resource-update": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/resource-updater.ts",
-    "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/queue-board.ts",
+    "dev:schedule": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env scheduler.ts",
+    "dev:add-repositories": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env add-repositories.ts",
+    "dev:crawler": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env crawler.ts",
+    "dev:updater": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env updater.ts",
+    "dev:resource-update": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env extra/resource-updater.ts",
+    "dev:queue-board": "TS_NODE_TRANSPILE_ONLY=true node --expose-gc -r ts-node/register -r tsconfig-paths/register -r @gittrends/env extra/queue-board.ts",
     "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env -T extra/repos-stats.ts",
-    "clinic-doctor": "clinic doctor -- node -r @gittrends/env dist/updater-collect.js",
-    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env dist/updater-collect.js",
-    "clinic-flame": "clinic flame -- node -r @gittrends/env dist/updater-collect.js",
     "clinic-heapprofiler": "TS_NODE_TRANSPILE_ONLY=true clinic heapprofiler -- node -r ts-node/register -r @gittrends/env updater-collect.ts",
     "pm2": "node -r @gittrends/env ./node_modules/.bin/pm2",
     "pm2-runtime": "node -r @gittrends/env ./node_modules/.bin/pm2-runtime"
@@ -51,8 +47,10 @@
     "ip": "^1.1.5",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
+    "log-update": "^4",
     "node-object-hash": "^2.3.10",
     "numeral": "^2.0.6",
+    "ora": "^5",
     "parse-redis-url-simple": "^1.0.2",
     "table": "^6.8.0",
     "wtfnode": "^0.9.1",
